[gd_scene load_steps=3 format=3]

[ext_resource path="res://paranoia_meter/ParanoiaMeter.gd" type="Script" id=1]
[ext_resource path="res://paranoia_meter/AuraEffect.tres" type="ShaderMaterial" id=2]
[ext_resource path="res://paranoia_meter/DebugConsole.tscn" type="PackedScene" id=3]

[node name="ParanoiaMeter" type="Node2D"]
script = ExtResource( 1 )

[node name="AuraEffect" type="ColorRect" parent="."]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1,1,1,0)

[node name="DebugConsole" parent="." instance=ExtResource(3)]
